--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon"  href="https://www.freeiconspng.com/thumbs/movie-icon/movie-icon-11.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mini-App Challenge: Movie List
-</title>
+    <title>Mini-App Challenge: Movie List</title>
   </head>
   <body>
     <div id="root"></div>
